# Neural-Query-Optimizer

./: .gitignore  DESIGN.md  README.md  TECHNICAL_REPORT.md  pyproject.toml  requirements.txt  run_experiments.py
configs/: default.yaml
data/: sample_queries.sql
neural_query_optimizer/: __init__.py  main.py
neural_query_optimizer/api/: server.py
neural_query_optimizer/cost_model/: baseline.py  cardinality.py
neural_query_optimizer/execution_engine/: database.py  simulator.py
neural_query_optimizer/logical_plan/: builder.py
neural_query_optimizer/ml_model/: features.py  inference.py  model.py  rl_bandit.py
neural_query_optimizer/parser/: sql_parser.py
neural_query_optimizer/physical_plan/: generator.py
neural_query_optimizer/training/: pipeline.py  query_generator.py
neural_query_optimizer/utils/: config.py  feature_store.py  types.py
scripts/: run_experiment.sh
tests/: test_cardinality_cost.py  test_execution.py  test_parser.py  test_physical_plan.py  test_training_pipeline.py
