[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-query-optimizer"
version = "0.1.0"
description = "A learned cost-based query optimization engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pyyaml>=6.0.0",
  "sqlglot>=25.0.0",
  "psutil>=6.0.0",
  "joblib>=1.4.0",
  "matplotlib>=3.9.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
